# py-algebraic-contours

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  pytest.toml  requirements-dev.txt  requirements.txt
experiments/: README.md  animate_rotation.py  generate_example_figure.py  generate_perspective_distortion.py  generate_perspective_figure.py  generate_smoothness_figure.py  generate_timing_data.py  run_experiments.py
experiments/animations/: README.md  animate_approximation_error.py  animate_rotation.py
experiments/data/: .gitignore  README.md
experiments/figures/: README.md  generate_example_figure.py  generate_perspective_distortion_figure.py  generate_perspective_figure.py  generate_smoothness_figure.py  generate_timing_data.py
experiments/metrics/: README.md  generate_similarity_metrics.py  generate_timing_metrics.py
experiments/utils/: add_header_to_similarity_csv.py  add_header_to_timing_csv.py  generate_camera_matrices.py
src/: README.md
tests/: conftest.py
tests/contour_network/: test_compute_closed_contours.py  test_compute_contours.py  test_compute_cusp.py  test_compute_rational_bezier_curve_intersections.py  test_compute_ray_intersections.py  test_compute_ray_intersections_pencil_method.py  test_compute_self_intersectios.py  test_contour_network.py  test_intersection_heuristics.py  test_project_curves.py  test_projected_curve_network.py
tests/core/: conftest.py  test_apply_transformations.py  test_bivariate_quadratic_function.py  test_common.py  test_conic.py  test_convert_conic.py  test_evaluate_surface.py  test_halfedge.py  (+4 more)
(+104 files in other folders)
